--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "vite": "^3.1.4"
   },
   "dependencies": {
+    "final-form": "^4.20.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-final-form": "^6.5.9",
     "react-router-dom": "^6.4.1"
   }
 }
