--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,14 @@
     "module": "ES2022",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "baseUrl": "./",
+    "paths": {
+      "types/*": ["./src/types/*"],
+      "components/*": ["./src/components/*"]
+    },
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": ["node_modules"]
 }
