--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
   },
   "dependencies": {
     "final-form": "^4.20.9",
+    "final-form-arrays": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
+    "react-final-form-arrays": "^3.1.4",
     "react-router-dom": "^6.4.1"
   }
 }
