--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
     "react-final-form-arrays": "^3.1.4",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "yup": "^1.1.1"
   }
 }
