--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vite": "^3.1.4"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "final-form": "^4.20.9",
     "final-form-arrays": "^3.1.0",
     "react": "^18.2.0",
